--- a/templates/include_css.html
+++ b/templates/include_css.html
@@ -3,6 +3,9 @@
 <!-- Bootstrap 3.3.6 minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
+<!-- Font-Awesome 4.5 minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <link href="{% static 'css/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
 
