--- a/templates/include_navbar.html
+++ b/templates/include_navbar.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -7,12 +9,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'home' %}">Project name</a>
+            <a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="{% static 'img/gardenShare_logo.png' %}"</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li class="active"><a href="#features">Features</a></li>
+                <li><a href="#pricing">Pricing</a></li>
                 <li><a href="{% url 'db' %}">db</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -25,9 +27,7 @@
             </ul>
         </div><!--/.nav-collapse -->
         {% if request.user.is_authenticated %}
-            <div>
-                <span class="lead">Welcome {{ user }}</span>
-            </div>
+
         {% endif %}
     </div><!--/.container-fluid -->
 </nav>
