--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -11,9 +11,13 @@ body {
     background-color: #3fb53f;
 }
 
-.logo {
+.logo_nav {
     height: 45px;
     margin-top: -13px;
+}
+
+.logo_jumbotron{
+  height: 100px;
 }
 
 .center {
