added dashboard page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -24,6 +24,14 @@ body {
     text-align: center;
 }
 
+.welcomeUser {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    line-height: 20px;
+    color: #287128;
+    font-weight: bold;
+}
+
 /*Landing Page - Pricing Section*/
 .amount {
     font-size: xx-large;
