--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
         <meta name="author" content="">
         <link rel="icon" href="{% static 'img/favicon.ico' %}">
 
-        <title>Navbar Template for Bootstrap</title>
+        <title>GardenShare</title>
 
         {% include 'include_css.html' %}
     </head>
