--- a/templates/home.html
+++ b/templates/home.html
@@ -21,12 +21,12 @@
         <div class="col-sm-4">
             <p class="center"><i class="fa fa-pagelines fa-3x"></i></p>
             <p class="lead center">Garden Log/Diary</p>
-            <p>Keep a log/diary of you gardening experience.  Include pictures and videos.  Show off your sucess or help others learn from you mistakes.</p>
+            <p>Keep a log/diary of you gardening experience.  Include pictures and videos.  Show off your sucess or help others learn from your mistakes.</p>
         </div> <!-- /col -->
         <div class="col-sm-4">
             <p class="center"><i class="fa fa-share-alt fa-3x"></i></p>
-            <p class="center">Share Your Garden</p>
-            <p>Share you garden with the world.  Or just share it with a few select friends.  You control what you share and who you share it with.</p>
+            <p class="lead center">Share Your Garden</p>
+            <p>Share your garden with the world.  Or just share it with a few select friends.  You control what you share and who you share it with.</p>
         </div> <!-- /col -->
         <div class="col-sm-4">
             <p class="center"><i class="fa fa-user fa-3x"></i></p>
