--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,6 +10,7 @@
             <h1>Dashboard</h1>
             <p>{{ msg }} {{ user }}</p>
             <p>UserID: {{ request.user.get_profile.id }}</p>
+            <p>Results: {{ results }}</p>
 
 
         </div>
