--- a/templates/include_css.html
+++ b/templates/include_css.html
@@ -9,8 +9,8 @@
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <link href="{% static 'css/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
 
-<!-- Custom styles for this template -->
-<link href="navbar.css" rel="stylesheet">
+<!-- Custom styles for this template
+<link href="navbar.css" rel="stylesheet"> -->
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
