--- a/templates/include_navbar.html
+++ b/templates/include_navbar.html
@@ -17,6 +17,7 @@
                 <li><a href="#pricing">Pricing</a></li>
                 <!--<li><a href="{ % url 'db' %}">db</a></li>-->
                 <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
+                <li><a href="/testDb">testDb</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.is_authenticated %}
