Basic Diary Nav

--- a/templates/include_navbar.html
+++ b/templates/include_navbar.html
@@ -16,7 +16,7 @@
                 <li class="active"><a href="#features">Features</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <!--<li><a href="{ % url 'db' %}">db</a></li>-->
-                <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
+                <li><a href="{% url 'diary' %}">Plant Diary</a></li>
                 <li><a href="/testDb">testDb</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
